--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Title</title>
-    <link rel="stylesheet" href="app.css" />
-    <script type="module" src="dist/bundle.js"></script>
+    <link rel="stylesheet" href="./app.css" />
+    <script type="module" src="./dist/bundle.js"></script>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">high there u hey</div>
   </body>
 </html>
